# ytclips

./: LICENSE  README.md  pyproject.toml
core/: __init__.py  main.py
core/pipeline/: __init__.py  analyze.py  base.py  clip.py  download.py  smartcrop.py  subtitle.py  thumbnail.py  title_generator.py  transcript.py
core/services/: __init__.py  gemini_analyzer.py  gemini_client.py
core/utils/: __init__.py  ffmpeg.py  subtitles.py
